[gd_scene load_steps=12 format=3 uid="uid://dtruoe0qhhsy6"]

[ext_resource type="Script" path="res://src/Scripts/level_template.gd" id="1_af18k"]
[ext_resource type="Texture2D" uid="uid://dv3vbigmnq26g" path="res://assets/oceanbackground.jpg" id="2_v48o7"]
[ext_resource type="PackedScene" uid="uid://cycunt3b4mv6w" path="res://src/scenes/grid.tscn" id="3_41f7a"]
[ext_resource type="Script" path="res://src/Scripts/button_container.gd" id="4_1cm05"]
[ext_resource type="Theme" uid="uid://mt7ddgnm65ct" path="res://assets/Themes/game_buttons_theme.tres" id="5_5ohe3"]
[ext_resource type="Script" path="res://src/Scripts/button.gd" id="6_u5wb6"]
[ext_resource type="Texture2D" uid="uid://61o3wl3d2uki" path="res://assets/rotate.png" id="7_k6r2k"]
[ext_resource type="Texture2D" uid="uid://dlkv17ywelsb8" path="res://assets/flip.png" id="8_7562b"]
[ext_resource type="Texture2D" uid="uid://7yrw2ol2ty1d" path="res://assets/arrow.png" id="9_7urq6"]
[ext_resource type="Script" path="res://src/Scripts/scene_switch_button.gd" id="10_21dyq"]
[ext_resource type="PackedScene" uid="uid://hmtdx7d7sg8e" path="res://src/scenes/rising_bubbles.tscn" id="11_qark7"]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_af18k")

[node name="Oceanbackground" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(484, 479)
texture = ExtResource("2_v48o7")

[node name="Text" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelText" type="RichTextLabel" parent="Text"]
layout_mode = 0
offset_left = 313.0
offset_top = 69.0
offset_right = 573.0
offset_bottom = 157.0
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 64
text = "Level 4
"
fit_content = true
scroll_active = false

[node name="MoveText" type="RichTextLabel" parent="Text"]
layout_mode = 0
offset_left = 725.0
offset_top = 75.0
offset_right = 945.0
offset_bottom = 120.0
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 25
text = "Moves
"
fit_content = true
scroll_active = false

[node name="BubblesText" type="RichTextLabel" parent="Text"]
layout_mode = 0
offset_left = 725.0
offset_top = 121.0
offset_right = 965.0
offset_bottom = 166.0
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 25
text = "Bubbles
"
fit_content = true
scroll_active = false

[node name="GridScene" parent="." instance=ExtResource("3_41f7a")]
INIT_BLOCK_POSITIONS = Array[Vector2i]([Vector2i(0, 0), Vector2i(2, 6), Vector2i(6, 5), Vector2i(6, 1), Vector2i(5, 0)])
num_moves = 3

[node name="BubbleCounter" type="Label" parent="GridScene"]
layout_mode = 0
offset_left = 852.0
offset_top = 118.0
offset_right = 892.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 32
text = "19"

[node name="MoveCounter" type="Label" parent="GridScene"]
layout_mode = 0
offset_left = 852.0
offset_top = 70.0
offset_right = 892.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 32
text = "19"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
offset_left = 287.0
offset_top = 754.0
offset_right = 407.0
offset_bottom = 850.0
script = ExtResource("4_1cm05")

[node name="LeftButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_5ohe3")
icon_alignment = 1
script = ExtResource("6_u5wb6")

[node name="Sprite" type="Sprite2D" parent="HBoxContainer/LeftButton"]
rotation = -0.989602
texture = ExtResource("7_k6r2k")

[node name="CenterButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_5ohe3")
icon_alignment = 1
script = ExtResource("6_u5wb6")

[node name="Sprite" type="Sprite2D" parent="HBoxContainer/CenterButton"]
rotation = -5.44892
texture = ExtResource("8_7562b")

[node name="RightButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_5ohe3")
script = ExtResource("6_u5wb6")

[node name="Sprite" type="Sprite2D" parent="HBoxContainer/RightButton"]
rotation = 0.989602
texture = ExtResource("7_k6r2k")
flip_h = true

[node name="MenuButton" type="Button" parent="."]
offset_left = 58.0
offset_top = 65.0
offset_right = 138.0
offset_bottom = 145.0
theme = ExtResource("5_5ohe3")
icon = ExtResource("9_7urq6")
script = ExtResource("10_21dyq")
scene_switch = "res://src/scenes/menu_ui.tscn"

[node name="RisingBubbles" parent="." instance=ExtResource("11_qark7")]

[connection signal="pressed" from="MenuButton" to="MenuButton" method="_on_pressed"]
